salesforce/force-app/main/default/objects/Customer__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Text</type>
    <length>20</length>
</CustomField>