salesforce/force-app/main/default/objects/Customer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <externalId>true</externalId>
    <label>Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>