salesforce/force-app/main/default/objects/Customer__c/fields/Failed_Login_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Failed_Login_Attempts__c</fullName>
    <label>Failed Login Attempts</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>