salesforce/force-app/main/default/objects/Customer__c/fields/KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Status__c</fullName>
    <label>KYC Status</label>
    <type>Text</type>
    <length>50</length>
</CustomField>