salesforce/force-app/main/default/objects/Customer__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>