salesforce/force-app/main/default/objects/Customer__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Text</type>
    <length>50</length>
</CustomField>