salesforce/force-app/main/default/objects/Customer__c/listViews/Active_Customers.listView-meta.xml
<ListView>
    <fullName>Active_Customers</fullName>
    <filterScope>Everything</filterScope>
    <label>Active Customers</label>
    <filters>
        <field>Account_Status__c</field>
        <operation>equals</operation>
        <value>ACTIVE</value>
    </filters>

</ListView>