salesforce/force-app/main/default/objects/Customer__c/listViews/Pending_KYC.listView-meta.xml
<ListView>
    <fullName>Pending_KYC</fullName>
    <filterScope>Everything</filterScope>
    <label>Pending KYC</label>
    <filters>
        <field>KYC_Status__c</field>
        <operation>equals</operation>
        <value>PENDING_KYC</value>
    </filters>

</ListView>